fixed contact links

--- a/app/views/default/teachers.html.erb
+++ b/app/views/default/teachers.html.erb
@@ -13,5 +13,5 @@
     when McNamara drops the F-bomb on Twitter because the world is about to end in a big nuclear fireball.</p>
   <p>We encourage you to help your students live history. Pick an event. Pick a person. Do the research and prepare the Tweets. Then watch history unfold via
     the most modern of experiences - Twitter.</p>
-  <p>Enjoy TwHistory and <a href="http://twhistory.org/stay-in-touch/">contact us</a> if you have any questions or need help.</p>
+  <p>Enjoy TwHistory and <a href="http://twhistory.org/contact">contact us</a> if you have any questions or need help.</p>
 </div>
