--- a/app/views/layouts/global/_footer.html.erb
+++ b/app/views/layouts/global/_footer.html.erb
@@ -6,7 +6,7 @@
 		<li><a href="http://blog.twhistory.org/">Blog</a></li>
 		<li><a href="/people">People</a></li>
 		<li><a href="/about">About</a></li>
-		<li><a href="http://twhistory.org/stay-in-touch/">Contact</a></li>
+		<li><a href="http://twhistory.org/contact">Contact</a></li>
 	</ul>
 	<p>copyleft TwHistory Online Licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons BY SA</a>: feel free to use, adapt and share, but always share alike</p> 
 	<p><a href="http://www.talis.com">Supported by a grant from the Talis Incubator for Open Education</a></p>
