--- a/app/views/broadcasts/new.html.erb
+++ b/app/views/broadcasts/new.html.erb
@@ -12,7 +12,7 @@
   	<%= output_errors(translate('broadcasts.new_problem'), {:class => 'help-box'}, @broadcast) %>
     <%= render 'form', :f => f %>
   	<div class="button form-row">
-    	<%= f.submit translate('general.create'), :class => 'pretty-button green wait-button' %>    	
+    	<%= f.submit translate('general.create'), :class => 'clean-green wait-button' %>    	
       <div class="waiting"><%=translate('broadcasts.wait') %></div>
     </div>
   <% end -%>
