--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -13,21 +13,7 @@ table{border-collapse:collapse;border-spacing:0;}
 .spaced-10{margin:10px;}
 input,textarea,select{vertical-align:middle;font-family:inherit;font-size:1em;}
 .block{margin:20px 0;}
-/*Button code from http://monc.se/kitchen/95/scalable-buttons-update*/
-.pretty-button{display:inline-block;position:relative;background:#aaa;padding:5px;float:left;color:#fff;text-decoration:none;cursor:pointer;margin:2px;line-height:18px;}
-.pretty-button *{font-style:normal;background-image:url(/images/btn_outline.png);background-repeat:no-repeat;display:block;position:relative;}
-.pretty-button-blue-back *{background-image:url(/images/btn_outline_blue.png)}
-.pretty-button i{background-position:top left;position:absolute;margin-bottom:-5px;top:0;left:0;width:5px;height:5px;}
-.pretty-button span{background-position:bottom left;left:-5px;padding:0 0 5px 10px;margin-bottom:-5px;}
-.pretty-button span i{background-position:bottom right;margin-bottom:0;position:absolute;left:100%;width:10px;height:100%;top:0;}
-.pretty-button span span{background-position:top right;position:absolute;right:-10px;margin-left:10px;top:-5px;height:0;}
-.pretty-button.blue { background: #BFE9E6; }
-.pretty-button.green { background: #A5CD39; }
-.pretty-button:hover { background-color: #F7931E; }
-.pretty-button:active { background-color: #F7931E; }
-.pretty-button[class] { background-image: url(/images/btn_shade.png); background-position: bottom; }
 .inline-button{float:none;}
-* html .pretty-button span,* html .pretty-button i{float:left;width:auto;background-image:none;cursor:pointer;}/*ie hack*/
 .button_to{float:left;}
 /* general settings */
 body{margin:0;color:#4b3013;font:14px Arial,Helvetica,sans-serif;background:url(/images/bg-body.gif);}
@@ -363,3 +349,11 @@ a:hover{text-decoration:none;}
 #contact input[type="text"]{width:450px;}
 #contact textarea{width:500px;height:300px;}
 #contact .button{margin:10px 0 5px 433px;font-size:1.5em;}
+
+.clean-green{background:#A4C54C;background:-moz-linear-gradient(0% 100% 90deg,#A4C54C,#9AB454);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#9AB454),to(#A4C54C));border:1px solid #A4C54C;border-width:1px 1px 0 1px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-box-shadow:inset 0 1px 0 0 #96ca6d;-webkit-box-shadow:inset 0 1px 0 0 #96ca6d;box-shadow:inset 0 1px 0 0 #96ca6d;color:#fff;font-size:1em !important;font-weight:bold;line-height:1;padding:6px 2px;text-align:center;text-shadow:0 -1px 0 #4c9021;display:inline-block;position:relative;float:left;text-decoration:none;cursor:pointer;margin:2px;line-height:18px;}
+.clean-green:hover{background:#5a962c;background:-moz-linear-gradient(0% 100% 90deg,#5a962c,#72ac45);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#72ac45),to(#5a962c));cursor:pointer;}
+.clean-green:active{background:#9AB454;background:-moz-linear-gradient(0% 100% 90deg,#9AB454,#A4C54C);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#A4C54C),to(#9AB454));-moz-box-shadow:none;-webkit-box-shadow:none;box-shadow:none;border-width:0 1px 1px 1px;padding:8px 0 7px 0;}
+
+.clean-blue{background:#0EABA2;background:-moz-linear-gradient(0% 100% 90deg,#0EABA2,#00A69C);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#00A69C),to(#0EABA2));border:1px solid #0EABA2;border-width:1px 1px 0 1px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-box-shadow:inset 0 1px 0 0 #96ca6d;-webkit-box-shadow:inset 0 1px 0 0 #96ca6d;box-shadow:inset 0 1px 0 0 #96ca6d;color:#fff;font-size:1em !important;font-weight:bold;line-height:1;padding:6px 2px;text-align:center;text-shadow:0 -1px 0 #4c9021;display:inline-block;position:relative;float:left;text-decoration:none;cursor:pointer;margin:2px;line-height:18px;}
+.clean-blue:hover{background:#00A693;background:-moz-linear-gradient(0% 100% 90deg,#00A693,#54c3bd);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#54c3bd),to(#00A693));cursor:pointer;}
+.clean-blue:active{background:#00A69C;background:-moz-linear-gradient(0% 100% 90deg,#00A69C,#0EABA2);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#0EABA2),to(#00A69C));-moz-box-shadow:none;-webkit-box-shadow:none;box-shadow:none;border-width:0 1px 1px 1px;padding:8px 0 7px 0;}
