--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -114,6 +114,7 @@ a:hover{text-decoration:none;}
 .ico-comments,
 .ico-peoples{padding-left:35px;background:url(/images/ico-peoples.gif) no-repeat 0 50%;}
 .ico-comments a, .ico-peoples a{text-decoration:none;}
+.ico-comments span a, .ico-peoples span a{font-size:.6em;}
 .ico-comments{background:url(/images/ico-comments2.gif) no-repeat 0 50%;}
 .ico-doc{background:url(/images/ico-doc2.gif) no-repeat 0 50%;}
 .links-list{margin:-6px 0 3px 3px;}
@@ -350,10 +351,10 @@ a:hover{text-decoration:none;}
 #contact textarea{width:500px;height:300px;}
 #contact .button{margin:10px 0 5px 433px;font-size:1.5em;}
 
-.clean-green{background:#A4C54C;background:-moz-linear-gradient(0% 100% 90deg,#A4C54C,#9AB454);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#9AB454),to(#A4C54C));border:1px solid #A4C54C;border-width:1px 1px 0 1px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-box-shadow:inset 0 1px 0 0 #96ca6d;-webkit-box-shadow:inset 0 1px 0 0 #96ca6d;box-shadow:inset 0 1px 0 0 #96ca6d;color:#fff;font-size:1em !important;font-weight:bold;line-height:1;padding:6px 2px;text-align:center;text-shadow:0 -1px 0 #4c9021;display:inline-block;position:relative;float:left;text-decoration:none;cursor:pointer;margin:2px;line-height:18px;}
-.clean-green:hover{background:#5a962c;background:-moz-linear-gradient(0% 100% 90deg,#5a962c,#72ac45);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#72ac45),to(#5a962c));cursor:pointer;}
+.clean-green{background:#A4C54C;background:-moz-linear-gradient(0% 100% 90deg,#A4C54C,#9AB454);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#9AB454),to(#A4C54C));border:1px solid #A4C54C;border-width:1px 1px 0 1px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-box-shadow:inset 0 1px 0 0 #96ca6d;-webkit-box-shadow:inset 0 1px 0 0 #96ca6d;box-shadow:inset 0 1px 0 0 #96ca6d;color:#fff;font-size:1em ;font-weight:bold;line-height:1;padding:6px 2px;text-align:center;text-shadow:0 -1px 0 #4c9021;display:inline-block;position:relative;float:left;text-decoration:none;cursor:pointer;margin:2px;line-height:18px;}
+.clean-green:hover{background:#bbd96a;background:-moz-linear-gradient(0% 100% 90deg,#A4C54C,#bbd96a);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#A4C54C),to(#a5cd39));cursor:pointer;}
 .clean-green:active{background:#9AB454;background:-moz-linear-gradient(0% 100% 90deg,#9AB454,#A4C54C);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#A4C54C),to(#9AB454));-moz-box-shadow:none;-webkit-box-shadow:none;box-shadow:none;border-width:0 1px 1px 1px;padding:8px 0 7px 0;}
 
-.clean-blue{background:#0EABA2;background:-moz-linear-gradient(0% 100% 90deg,#0EABA2,#00A69C);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#00A69C),to(#0EABA2));border:1px solid #0EABA2;border-width:1px 1px 0 1px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-box-shadow:inset 0 1px 0 0 #96ca6d;-webkit-box-shadow:inset 0 1px 0 0 #96ca6d;box-shadow:inset 0 1px 0 0 #96ca6d;color:#fff;font-size:1em !important;font-weight:bold;line-height:1;padding:6px 2px;text-align:center;text-shadow:0 -1px 0 #4c9021;display:inline-block;position:relative;float:left;text-decoration:none;cursor:pointer;margin:2px;line-height:18px;}
-.clean-blue:hover{background:#00A693;background:-moz-linear-gradient(0% 100% 90deg,#00A693,#54c3bd);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#54c3bd),to(#00A693));cursor:pointer;}
+.clean-blue{background:#0EABA2;background:-moz-linear-gradient(0% 100% 90deg,#0EABA2,#00A69C);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#00A69C),to(#0EABA2));border:1px solid #0EABA2;border-width:1px 1px 0 1px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-box-shadow:inset 0 1px 0 0 #96ca6d;-webkit-box-shadow:inset 0 1px 0 0 #96ca6d;box-shadow:inset 0 1px 0 0 #96ca6d;color:#fff;font-size:1em;font-weight:bold;line-height:1;padding:6px 2px;text-align:center;text-shadow:0 -1px 0 #4c9021;display:inline-block;position:relative;float:left;text-decoration:none;cursor:pointer;margin:2px;line-height:18px;}
+.clean-blue:hover{background:#54c3bd;background:-moz-linear-gradient(0% 100% 90deg,#00A693,#54c3bd);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#54c3bd),to(#00A693));cursor:pointer;}
 .clean-blue:active{background:#00A69C;background:-moz-linear-gradient(0% 100% 90deg,#00A69C,#0EABA2);background:-webkit-gradient(linear,0% 0%,0% 100%,from(#0EABA2),to(#00A69C));-moz-box-shadow:none;-webkit-box-shadow:none;box-shadow:none;border-width:0 1px 1px 1px;padding:8px 0 7px 0;}
