updated footer with UEN link

--- a/app/views/layouts/global/_footer.html.erb
+++ b/app/views/layouts/global/_footer.html.erb
@@ -9,6 +9,10 @@
 		<li><a href="http://twhistory.org/contact">Contact</a></li>
 	</ul>
 	<p>copyleft TwHistory Online Licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons BY SA</a>: feel free to use, adapt and share, but always share alike</p> 
-	<p><a href="http://www.talis.com">Supported by a grant from the Talis Incubator for Open Education</a></p>
+	<p>
+	  Supported by grants from
+	  <a href="http://www.talis.com">The Talis Incubator for Open Education</a> and
+	  <a href="http://www.uen.org">The Utah Education Network (UEN)</a>
+	</p>
 </div>
 <%= output_flash(:class => "notify-box") %>
