--- a/public/stylesheets/muck-users.css
+++ b/public/stylesheets/muck-users.css
@@ -6,3 +6,5 @@
 #registration{width:400px;}
 span#email-availibility span.available { color:green; }
 span#email-availibility span.unavailable { color:#B61E12; }
+
+#access-code-not-found-msg a{text-decoration:underline;}
