--- a/app/views/default/teachers.html.erb
+++ b/app/views/default/teachers.html.erb
@@ -3,7 +3,7 @@
   <p>History is boring. At least the way we typically teach history is boring. Ask anyone who's been forced to memorize a list of dates and facts and they will
     tell you that they would rather have open heart surgery than deal with another high school history class.</p>
   <p>It's unfortunate that so many people have such a negative introduction to such a key subject.</p>
-  <p>History taught well is mind blowing and life changing. It turns out that the same history that puts 9th graders into a comma can also be made into movies that
+  <p>History taught well is mind blowing and life changing. It turns out that the same history that puts 9th graders into a coma can also be made into movies that
     people PAY to see. History experienced instead of memorized changes our perspectives, opens our eyes and helps us avoid the mistakes of our fore-fathers. History
     teaches us that while people 100 years ago wore different clothes and lacked iPhones they still shared our same basic human thoughts and passions. 
     By giving students the opportunity to see and feel the world through the past hopefully they can plan for the future.</p>
